--- a/BusinessGame/Views/Shared/_Layout.cshtml
+++ b/BusinessGame/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="ElencoUtenti">Utenti</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Prodotti</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shops" asp-action="Index">Negozio</a>
+                        </li>
                     </ul>
                 </div>
             </div>
